--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   app-server:
     # Configuration for building the docker image for the backend service
     build:
-      context: polling-app-server # Use an image built from the specified dockerfile in the `polling-app-server` directory.
+      context: blog-app-server # Use an image built from the specified dockerfile in the `polling-app-server` directory.
       dockerfile: Dockerfile
     ports:
       - "8080:8080" # Forward the exposed port 8080 on the container to port 8080 on the host machine
@@ -16,7 +16,7 @@ services:
     depends_on: 
       - db # This service depends on mysql. Start that first.
     environment: # Pass environment variables to the service
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/polls?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/blogs?useSSL=false
       SPRING_DATASOURCE_USERNAME: callicoder
       SPRING_DATASOURCE_PASSWORD: callicoder     
     networks: # Networks to join (Services on the same network can communicate with each other using their name)
