--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   app-server:
     # Configuration for building the docker image for the backend service
     build:
-      context: blog-app-server # Use an image built from the specified dockerfile in the `polling-app-server` directory.
+      context: blog-app-server # Use an image built from the specified dockerfile in the `blog-app-server` directory.
       dockerfile: Dockerfile
     ports:
       - "8080:8080" # Forward the exposed port 8080 on the container to port 8080 on the host machine
@@ -26,7 +26,7 @@ services:
   # Frontend Service 
   app-client:
     build:
-      context: polling-app-client # Use an image built from the specified dockerfile in the `polling-app-client` directory.
+      context: blog-app-client # Use an image built from the specified dockerfile in the `blog-app-client` directory.
       dockerfile: Dockerfile
       args:
         REACT_APP_API_BASE_URL: http://127.0.0.1:8080/api
@@ -45,7 +45,7 @@ services:
       - "3306:3306"
     restart: always
     environment:
-      MYSQL_DATABASE: polls
+      MYSQL_DATABASE: blogs
       MYSQL_USER: callicoder
       MYSQL_PASSWORD: callicoder
       MYSQL_ROOT_PASSWORD: root
