--- a/blog-app-server/src/main/resources/application-dev.yml
+++ b/blog-app-server/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/blogs?characterEncoding=UTF-8&useSSL=false
     username: root
-    password: root
+    password: Durex1997
     driver-class-name: com.mysql.cj.jdbc.Driver
     # 配置数据库信息
     type: com.alibaba.druid.pool.DruidDataSource
@@ -67,8 +67,12 @@ spring:
     show-sql: true
     open-in-view: false
 
+# Logback
 logging:
   path: /log
-  file: ids.log
+  file: blog-app-server.log
   level:
-    root: info
+    root: WARN
+    org:
+      springframework:
+        security: DEBUG
